Use node() when generating element id's

The current code followed the lead of crrev.com/279553002 and
incorrectly used generatingNode, which lead to discrepancies
when animating pseudo elements. It seems that node() is the
correct choice, both here and in the CL I referenced.

BUG=626571

Review-Url: https://codereview.chromium.org/2141743002
Cr-Commit-Position: refs/heads/master@{#404921}

Former-commit-id: 10b3fec07dfda5c362f1fc27a314468541c72ae0